--- a/src/main/resources/view/CommandBox.fxml
+++ b/src/main/resources/view/CommandBox.fxml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.geometry.Insets?>
-<StackPane styleClass="pane-with-border" prefHeight="60" xmlns="http://javafx.com/javafx/17"
-           xmlns:fx="http://javafx.com/fxml/1" style="-fx-background-color: #818589;">
-    <HBox alignment="CENTER_LEFT" spacing="5">
-        <ImageView fitWidth="25" fitHeight="25">
-            <Image url="@/images/search_icon.png"/>
+<StackPane prefHeight="60" style="-fx-background-color: #D7EAE2;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+    <HBox alignment="CENTER_LEFT" spacing="5" style="-fx-background-color: #D6E8E2;">
+        <ImageView fitHeight="25" fitWidth="25">
+            <Image url="@/images/search_icon.png" />
         </ImageView>
-        <TextField fx:id="commandTextField" prefHeight="45" HBox.hgrow="ALWAYS" onAction="#handleCommandEntered"
-                   promptText="Input command here..." style="-fx-background-color: transparent; -fx-border-color: #818589;" />
+        <TextField fx:id="commandTextField" onAction="#handleCommandEntered" prefHeight="45" promptText="Input command here..." style="-fx-background-color: #D7EAE2;" HBox.hgrow="ALWAYS" />
     </HBox>
     <padding>
         <Insets bottom="5" left="10" right="10" top="5" />
     </padding>
 </StackPane>
-
-
