--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -12,46 +12,44 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 
-<fx:root minHeight="800" minWidth="1290" onCloseRequest="#handleExit" title="ImmuniMate" type="javafx.stage.Stage"
-         xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root minHeight="800" minWidth="1290" onCloseRequest="#handleExit" title="ImmuniMate" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <icons>
-        <Image url="@/images/stethoscope.png"/>
+        <Image url="@/images/stethoscope.png" />
     </icons>
     <scene>
         <Scene>
             <stylesheets>
-                <URL value="@DarkTheme.css"/>
-                <URL value="@Extensions.css"/>
+                <URL value="@LightTheme.css" />
+                <URL value="@Extensions.css" />
             </stylesheets>
 
             <VBox>
-                <MenuBar fx:id="menuBar" style="-fx-background-color: #2FAD66;" VBox.vgrow="NEVER">
-                  <Menu mnemonicParsing="false" text="Help" style="-fx-font-family: Arial; -fx-font-size: 14px;">
-                    <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" style="-fx-font-family: Arial; -fx-font-size: 14px;" />
+                <MenuBar fx:id="menuBar" style="-fx-background-color: #469073;" VBox.vgrow="NEVER">
+                  <Menu mnemonicParsing="false" style="-fx-font-family: Arial; -fx-font-size: 14px;" text="Help">
+                    <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" style="-fx-font-family: Arial; -fx-font-size: 14px;" text="Help" />
                   </Menu>
-                  <Menu mnemonicParsing="false" text="ImmuniMate" style="-fx-font-family: Arial; -fx-font-size: 14px; -fx-font-weight: bold;" />
+                  <Menu mnemonicParsing="false" style="-fx-font-family: Arial; -fx-font-size: 14px; -fx-font-weight: bold;" text="ImmuniMate" />
                 </MenuBar>
 
-                <StackPane fx:id="commandBoxPlaceholder" minHeight="75" prefHeight="75" prefWidth="1290" styleClass="pane-with-border" VBox.vgrow="NEVER">
+                <StackPane fx:id="commandBoxPlaceholder" minHeight="75" prefHeight="75" prefWidth="1290" style="-fx-background-color: #D6E8E2;" VBox.vgrow="NEVER">
                     <padding>
                         <Insets bottom="10" left="10" right="10" top="10" />
                     </padding>
                 </StackPane>
 
-                <VBox minWidth="1290" prefWidth="1290" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
+                <VBox minWidth="1290" prefWidth="1290" VBox.vgrow="ALWAYS">
                     <children>
-                        <HBox prefHeight="400.0" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
+                        <HBox prefHeight="400.0" VBox.vgrow="ALWAYS">
                             <children>
-                                <VBox fx:id="personList" minWidth="450" prefWidth="450" styleClass="pane-with-border" VBox.vgrow="ALWAYS" HBox.hgrow="NEVER">
+                                <VBox fx:id="personList" minWidth="450" prefWidth="450" style="-fx-background-color: FDFFFE;" HBox.hgrow="NEVER" VBox.vgrow="ALWAYS">
                                     <padding>
-                                        <Insets bottom="10" left="10" right="10" top="10"/>
+                                        <Insets bottom="10" left="10" right="10" top="10" />
                                     </padding>
-                                    <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+                                    <StackPane fx:id="personListPanelPlaceholder" style="-fx-background-color: #FDFFFE;" VBox.vgrow="ALWAYS" />
                                 </VBox>
-                                <StackPane fx:id="resultPanelPlaceholder" minWidth="800" prefWidth="800"
-                                           styleClass="pane-with-border" VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS">
+                                <StackPane fx:id="resultPanelPlaceholder" minWidth="800" prefWidth="800" style="-fx-background-color: #E6E3E3;" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
                                     <padding>
-                                        <Insets bottom="10" left="10" right="10" top="10"/>
+                                        <Insets bottom="10" left="10" right="10" top="10" />
                                     </padding>
                                 </StackPane>
                             </children>
@@ -59,7 +57,7 @@
                     </children>
                 </VBox>
 
-                <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER"/>
+                <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
             </VBox>
         </Scene>
     </scene>
