--- a/src/main/resources/view/ResultPanel.fxml
+++ b/src/main/resources/view/ResultPanel.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.StackPane?>
 
-<StackPane fx:id="placeHolder" styleClass="pane-with-border" minWidth="780" prefWidth="780" xmlns="http://javafx.com/javafx/17"
-           xmlns:fx="http://javafx.com/fxml/1">
-    <TextArea fx:id="resultPanel" editable="false" styleClass="result-panel"/>
+<StackPane fx:id="placeHolder" minWidth="780" prefWidth="780" styleClass="pane-with-border" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+    <TextArea fx:id="resultPanel" editable="false" styleClass="result-panel" wrapText="true" />
 </StackPane>
