--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 
-<fx:root minHeight="800" minWidth="1290" onCloseRequest="#handleExit" title="ImmuniMate" type="javafx.stage.Stage"
+<fx:root minHeight="800" minWidth="1290" onCloseRequest="#handleExit" title="Address App" type="javafx.stage.Stage"
          xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <icons>
         <Image url="@/images/stethoscope.png"/>
@@ -25,7 +25,7 @@
             </stylesheets>
 
             <VBox>
-                <MenuBar fx:id="menuBar" style="-fx-background-color: #469073;" VBox.vgrow="NEVER">
+                <MenuBar fx:id="menuBar" style="-fx-background-color: #2FAD66;" VBox.vgrow="NEVER">
                   <Menu mnemonicParsing="false" text="Help" style="-fx-font-family: Arial; -fx-font-size: 14px;">
                     <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" style="-fx-font-family: Arial; -fx-font-size: 14px;" />
                   </Menu>
